--- a/index.html
+++ b/index.html
@@ -2,28 +2,169 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Ци мэнь</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Ци мэнь</title>
 </head>
 
 <body>
     <header class="header">
-        <p id="demo">111</p>
         <h1 class="header__title">Заголовок с определенным текстом</h1>
         <h2 class="header__subtitle"> Подзаголовок с вроде как проникновенной цитатой</h2>
-        <iframe id="ytplayer" 
-            type="text/html" 
-            width="320" 
-            height="180" 
-            src="https://www.youtube.com/embed/5dsGWM5XGdg" 
-            frameborder="0" 
-            allowfullscreen>
+        <iframe id="ytplayer" type="text/html" width="320" height="180" src="https://www.youtube.com/embed/5dsGWM5XGdg"
+            frameborder="0" allowfullscreen>
+        </iframe>
+        <a class="button" href="#info">ДАЛЕЕ</a>
     </header>
+    <section class="section info" id='info'>
+        <h2 class="section__title info__title">Множество текста с эффектным представлением товара (ну или как
+            получится).</h2>
+        <div class="wrapper info__wrapper">
 
-    <script src="/js/scripts.js"></script>
+            <p class="section__text"> Ци мэнь для Вас — слишком громоздкий и непонятный? Хотите съесть слона по кусочку?
+                1-2 урока цимэнь каждую
+                неделю в Ваш почтовый ящик!</p>
+            <p class="section__text">НА ВСЕ ВКУСЫ: порой это будет видео, порой аудио или текст. </p>
+            <p class="section__text">Пока не готовы на профессиональный курс? Или уже прошли ПРО ци мэнь и хотите новые
+                фишки, техники и
+                примеры?
+            </p>
+            <p class="section__text">Ци мэнь дунь цзя можно условно перевести как «Таинственные», или «Чудесные», или
+                «Мистические» Врата –
+                врата,
+                через которые мы отправляемся на встречу удаче или скрываемся от неудачи.
+            </p>
+            <p class="section__text">Ци Мэь Дунь Цзя фокусируется на распределении благоприятной и неблагоприятной qi
+                относительно 8
+                направлений в
+                году, в месяце, в дне и в течение каждого сдвоенного китайского часа.</p>
+            <p class="section__text">Как только вы совершаете действие или путешествие в благоприятном направлении в
+                определенное время, ваша
+                удача улучшается драматическим и чудесным образом. Например, вы можете поехать на встречу с клиентом или
+                работодателем для того, чтобы они поддержали ваши идеи и восприняли вашу личность наилучшим образом.</p>
+
+        </div>
+    </section>
+    <section class="section lists">
+        <h2 class="section__title lists__title">Заголовок раздела</h2>
+        <div class="wrapper lists__wrapper">
+            <div class="list__wrapper">
+                <h3 class="list__title">Список 1:</h3>
+                <ul class="list">
+                    <li class="list__item">Двери ци мэнь дунь цзя для жизни, самое важное</li>
+                    <li class="list__item">Характеристики и качества</li>
+                    <li class="list__item">Небесные стволы для жизни</li>
+                    <li class="list__item">Базовые правила применения</li>
+                    <li class="list__item">Изучаем иероглифы цимэнь</li>
+                </ul>
+            </div>
+            <div class="wrapper list__wrapper">
+                <h3 class="list__title">Список 2:</h3>
+                <ul class="list">
+                    <li class="list__item">Двери ци мэнь дунь цзя для жизни, продолжение</li>
+                    <li class="list__item">Звезды для жизни</li>
+                    <li class="list__item">Больше правил и применений…</li>
+                    <li class="list__item">Изучаем иероглифы цимэнь, продолжение</li>
+                    <li class="list__item">Почему «закон притяжения» из фильма «Секрет»срабатывает далеко не у всех</li>
+                    <li class="list__item">Изучаем иероглифы цимэнь, продолжение</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="section info">
+        <h2 class="section__title info__title">Заголовок раздела с большим содержанием текста, существенно большим</h2>
+        <div class="wrapper info__wrapper">
+
+            <p class="section__text"> Несмотря на то, что в Ци Мэнь Дунь Цзя присутствуют разные компоненты – двери,
+                небесные стволы, звёзды,
+                духи и так далее, самое важное в Чи Мэнь всё-таки двери. Ведь это искусство переводится как мистические
+                врата, скрывающие Дзя.
+            </p>
+            <p class="section__text">Дверь Отдых связана именно с отдыхом, расслаблением, с восстановлением здоровья и
+                прочее. Не слишком мотивирующая дверь. Это дверь комфорта. Как большинство из нас не любят выходить из
+                зоны комфорта. Комфорт – это отдых. Хороша для отдыха, лечения, медицинских процедур .</p>
+            <p class="section__text">Шэн мень, так называемая дверь «Жизнь» или «Рождение» ,- самая денежная дверь.
+                Проблема в том, что приходится много работать, как и в случае звезды восемь.
+
+            </p>
+            <p class="section__text">Дверь «Иллюзия» — под ее влиянием хорошо прятаться, чтобы Вас не нашли. Например,
+                пьяный ревнивый муж или начальник, когда Вы в отпуске-:)
+                Также дверь Иллюзия управляет метафизическими искусствами. Так или иначе, это всё скрытое, тайное. Кроме
+                того, она управляет такими вещами как интернет-маркетинг или интернет-бизнес.
+
+            </p>
+            <p class="section__text">Триграмма Шунь – ветер — распространяющаяся информация.
+                Поэтому любая дверь денежная, но неким своим специфическим образом.
+            </p>
+            <p class="section__text">Дверь Ужас – это шок, ужас. Она хороша для кого? Например, для политиков.
+                Они же всё время рассказывают страхи – если не проголосуете за нас, тогда все заводы остановятся, вы
+                окажетесь на улице…
+            </p>
+            <div class="important-text">
+                <p>Завлекающий текст, на котором необходимо акцентировать внимание и как-либо выделить, на свой вкус.
+                    Возможно отдельным блоком с обводкой и фоном.</p>
+            </div>
+        </div>
+    </section>
+    <section class="section reviews">
+        <h2 class="section__title reviews__title">Отзыв участников курса:</h2>
+        <ul class="reviews-list">
+            <li class="review">
+                <p class="review__text">Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший
+                    курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший
+                    курс.
+                    Очень хороший курс. Очень хороший курс. Очень хороший курс.
+                </p>
+                <p class="review__author">Светлана Ивановна</p>
+            </li>
+            <li class="review">
+                <p class="review__text">Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший
+                    курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший
+                    курс. Очень хороший курс.
+                </p>
+                <p class="review__author">Светлана Ивановна</p>
+            </li>
+            <li class="review">
+                <p class="review__text">Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс.
+                    Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс.
+                    Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс.
+                    Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший
+                    курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс. Очень хороший курс. Очень хороший курс.
+
+                </p>
+                <p class="review__author">Светлана Ивановна</p>
+            </li>
+            <li class="review">
+                <p class="review__text">Очень хороший курс. Очень хороший курс. Очень хороший курс. Очень
+                    хороший курс.
+                    Очень хороший курс. Очень хороший курс.
+
+                </p>
+                <p class="review__author">Светлана Ивановна</p>
+
+            </li>
+        </ul>
+    </section>
+    <section class="section info">
+            <h2 class="section__title info__title">Автор проекта</h2>
+            <div class="wrapper info__wrapper">
+                <img src="./images/author.jpg" alt="Автор" class="author__image">
+                <p class="author__text">
+                        <strong>Василий Степанович</strong> - очень хороший человек, делает качественные проекты. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.
+                </p>
+
+            </div>
+        </section>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
