--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="button" href="#info">ДАЛЕЕ</a>
     </header>
     <section class="section info" id='info'>
-        <h2 class="section__title info__title">Множество текста с эффектным представлением товара (ну или как
+        <h2 class="section__title info__title hidden">Множество текста с эффектным представлением товара (ну или как
             получится).</h2>
         <div class="wrapper info__wrapper">
 
@@ -60,7 +60,7 @@
                     <li class="list__item">Изучаем иероглифы цимэнь</li>
                 </ul>
             </div>
-            <div class="wrapper list__wrapper">
+            <div class="list__wrapper">
                 <h3 class="list__title">Список 2:</h3>
                 <ul class="list">
                     <li class="list__item">Двери ци мэнь дунь цзя для жизни, продолжение</li>
@@ -156,13 +156,19 @@
     </section>
     <section class="section info">
             <h2 class="section__title info__title">Автор проекта</h2>
-            <div class="wrapper info__wrapper">
+            <div class="wrapper info__wrapper clearfix">
                 <img src="./images/author.jpg" alt="Автор" class="author__image">
                 <p class="author__text">
                         <strong>Василий Степанович</strong> - очень хороший человек, делает качественные проекты. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.
                 </p>
 
             </div>
+        </section>
+        <section class="section price info">
+            <h2 class="section__title info__title">Варианты участия:</h2>
+            <p class="price__text">1000$</p>
+            <p class="price__text price__text--second">~63000RUR или ~27000UAH</p>
+            <button class="button">КУПИТЬ</button>
         </section>
     <script src="./js/scripts.js"></script>
 </body>
