--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <header class="header">
         <h1 class="header__title">Заголовок с определенным текстом</h1>
         <h2 class="header__subtitle"> Подзаголовок с вроде как проникновенной цитатой</h2>
-        <iframe id="ytplayer" type="text/html" width="320" height="180" src="https://www.youtube.com/embed/5dsGWM5XGdg"
-            frameborder="0" allowfullscreen>
-        </iframe>
+        <div class="frame">
+            <iframe id="ytplayer" type="text/html" width="560" height="315"
+                src="https://www.youtube.com/embed/5dsGWM5XGdg" frameborder="0" allowfullscreen>
+            </iframe>
+        </div>
+
         <a class="button" href="#info">ДАЛЕЕ</a>
     </header>
     <section class="section info" id='info'>
@@ -155,21 +158,27 @@
         </ul>
     </section>
     <section class="section info">
-            <h2 class="section__title info__title">Автор проекта</h2>
-            <div class="wrapper info__wrapper clearfix">
-                <img src="./images/author.jpg" alt="Автор" class="author__image">
-                <p class="author__text">
-                        <strong>Василий Степанович</strong> - очень хороший человек, делает качественные проекты. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.  Описание его достижений. Описание его достижений.
-                </p>
+        <h2 class="section__title info__title">Автор проекта</h2>
+        <div class="wrapper info__wrapper clearfix">
+            <img src="./images/author.jpg" alt="Автор" class="author__image">
+            <p class="author__text">
+                <strong>Василий Степанович</strong> - очень хороший человек, делает качественные проекты. Описание его
+                достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его
+                достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его
+                достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его
+                достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его
+                достижений. Описание его достижений. Описание его достижений. Описание его достижений. Описание его
+                достижений. Описание его достижений. Описание его достижений.
+            </p>
 
-            </div>
-        </section>
-        <section class="section price info">
-            <h2 class="section__title info__title">Варианты участия:</h2>
-            <p class="price__text">1000$</p>
-            <p class="price__text price__text--second">~63000RUR или ~27000UAH</p>
-            <button class="button">КУПИТЬ</button>
-        </section>
+        </div>
+    </section>
+    <section class="section price info">
+        <h2 class="section__title info__title">Варианты участия:</h2>
+        <p class="price__text">1000$</p>
+        <p class="price__text price__text--second">~63000RUR или ~27000UAH</p>
+        <button class="button">КУПИТЬ</button>
+    </section>
     <script src="./js/scripts.js"></script>
 </body>
 
